ecmascript/parser/tests/test262-error-references/fail/b724e6baaf7fd094.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/b724e6baaf7fd094.js:1:10
  |
1 | function false() { }
  |          ^^^^^

